# insider-detect

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: predictions.db
deployments/docker/: Dockerfile  docker-compose.yml
insider_detect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_everything.ps1
src/insider_detect/: cli.py
src/insider_detect/api/: __init__.py  app.py  exceptions.py  middleware.py
src/insider_detect/core/: config.py  logging.py
src/insider_detect/services/: model_service.py
web-dashboard/: README.md  index.html  package-lock.json  package.json
web-dashboard/src/: api.ts  index.css  main.tsx
